# denso_cobotta_ros

./: .gitignore  README.md
denso_cobotta_bringup/: CMakeLists.txt  package.xml
denso_cobotta_bringup/launch/: denso_cobotta_bringup.launch  simulation.launch.py
denso_cobotta_control/: CMakeLists.txt  package.xml
denso_cobotta_control/include/denso_cobotta_control/: denso_cobotta_hw.h
denso_cobotta_control/launch/: denso_cobotta_control.launch
denso_cobotta_control/src/: denso_cobotta_control.cpp
denso_cobotta_descriptions/: CMakeLists.txt  package.xml
denso_cobotta_descriptions/cobotta_description/: J1.dae  J2.dae  J3.dae  J5.dae  base_link.dae  cobotta.urdf.xacro
denso_cobotta_driver/: CMakeLists.txt  package.xml
denso_cobotta_driver/include/denso_cobotta_driver/: denso_cobotta_driver.h
denso_cobotta_driver/launch/: denso_cobotta_driver.launch
denso_cobotta_driver/src/: denso_cobotta_driver.cpp
denso_cobotta_gazebo/: CMakeLists.txt  package.xml
denso_cobotta_gazebo/launch/: denso_cobotta_gazebo.launch
denso_cobotta_gripper/: CMakeLists.txt  package.xml
denso_cobotta_gripper/include/denso_cobotta_gripper/: gripper_base.h  gripper_parallel.h
denso_cobotta_gripper/launch/: denso_cobotta_gripper.launch
denso_cobotta_gripper/src/: denso_cobotta_gripper.cpp
denso_cobotta_interfaces/: CMakeLists.txt  package.xml
denso_cobotta_lib/: CMakeLists.txt  package.xml
denso_cobotta_lib/include/denso_cobotta_lib/: brake.h  cobotta.h  cobotta_common.h  driver.h  gripper.h  led.h  mini_io.h  motor.h  publish_info.h  safety_mcu.h
denso_cobotta_lib/src/: brake.cpp  cobotta.cpp  cobotta_exception.cpp  driver.cpp  gripper.cpp  led.cpp  message.cpp  mini_io.cpp  motor.cpp  publish_info.cpp  safety_mcu.cpp
denso_cobotta_moveit_config/: CMakeLists.txt  package.xml
denso_cobotta_moveit_config/config/: cobotta.ros2_control.xacro  cobotta.urdf.xacro  controllers.yaml  initial_positions.yaml  ros_controllers.yaml
denso_cobotta_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo.launch.py  joystick_control.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
denso_cobotta_ros/: CMakeLists.txt  package.xml
