<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_bringup</name>
  <version>2.0.0</version>
  <description>The denso_cobotta_bringup package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
  </export>
</package>
