<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_descriptions</name>
  <version>2.0.0</version>
  <description>The denso_cobotta_descriptions package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
