<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_driver</name>
  <version>2.0.0</version>
  <description>The denso_cobotta_driver package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>denso_cobotta_lib</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>denso_cobotta_interfaces</depend>  
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <export>
  </export>
</package>
