<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_gazebo</name>
  <version>2.0.0</version>
  <description>The denso_cobotta_gazebo package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>denso_cobotta_descriptions</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>

