<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_gripper</name>
  <version>2.0.0</version>
  <description>The denso_cobotta_gripper package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>denso_cobotta_lib</build_depend>
  <build_depend>denso_cobotta_driver</build_depend>
  <build_depend>denso_cobotta_interfaces</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>denso_cobotta_lib</exec_depend>
  <export>
      <build_type>ament_cmake</build_type>    
  </export>
</package>
