<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_lib</name>
  <version>2.0.0</version>
  <description>The denso_cobotta_lib package</description>
  <license>GPL</license>

  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>

  <buildtool_depend>ament_package</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
