<?xml version="1.0"?>
<package>
  <name>denso_cobotta_ros</name>
  <version>2.0.0</version>
  <description>Package for COBOTTA OSS</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
  </export>
</package>
